# Project_Escape-X_AI

./: .gitignore  README.md  dump.rdb  main.py  pyproject.toml
backend/apps/ai/: __init__.py  admin.py  agent.py  models.py  serializers.py  tasks.py  urls.py  views.py  youtube_tool.py
backend/apps/ai/migrations/: 0001_initial.py
backend/apps/core/: constants.py  encryption.py  exceptions.py  responses.py  test_utils.py
backend/apps/game/: __init__.py  admin.py  apps.py  engine.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/game/migrations/: 0001_initial.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/tests/: test_users.py
backend/backend/: celery.py  settings.py  urls.py
backend/scripts/: generate_fernet_key.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: ai.js  auth.js  axios.js  game.js
frontend/src/components/cutscenes/: Level1Cutscene.jsx  Level1FailureScene.jsx  Level2Cutscene.jsx  Level2FailureScene.jsx  Level3Cutscene.jsx  Level3FailureScene.jsx  Level4Cutscene.jsx  (+5 more)
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useAIPolling.js  useAuth.js  useGameSession.js
frontend/src/pages/: Dashboard.jsx  GeminiKeyPage.jsx  LandingPage.jsx  LevelFailure.jsx  LevelIntro.jsx  LevelPlayPage.jsx  LevelSuccess.jsx  LoginPage.jsx  ProfilePage.jsx  RegisterPage.jsx  SpaceStation.jsx
frontend/src/styles/: theme.js
(+35 files in other folders)
