[project]
name = "project-escape-x-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "cryptography>=48.0.0",
    "django>=6.0.5",
    "django-celery>=3.1.17",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-redis>=6.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.196.0",
    "google-generativeai>=0.8.6",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.3",
    "langgraph>=1.2.1",
    "pathlib>=1.0.1",
    "pillow>=12.2.0",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "redis>=7.4.0",
]
